Bug 127907 - FILEOPEN DOCX Custom axis title position resets to default
Summary: FILEOPEN DOCX Custom axis title position resets to default
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.0.5 release
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2019-10-01 12:59 UTC by NISZ LibreOffice Team
Modified: 2019-10-03 11:17 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the original document side by side in Word and Writer. (82.04 KB, image/png)
2019-10-01 13:00 UTC, NISZ LibreOffice Team
Details
Example file from Word (20.67 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-10-01 13:01 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-10-01 12:59:32 UTC
Description:
Custom axis title of chart in Microsoft Word document resets to default when the document is opened in LibreOffice 6.3.

Steps to Reproduce:
    1. Create a document in Microsoft Word.
    2. Insert a chart.
    3. Change the positioning of the chart X axis title to right and the Y axis title to up a little.
    4. Save the file.
    5. Open the same document in LibreOffice Writer 6.3.
    6. View the attached screenshot.
    7. Notice, that the chart axis titles are positioned to the default center.

Actual Results:
Custom axis title of chart resets to default when the document is opened in LibreOffice 6.3.

Expected Results:
Custom axis title of chart should be aligned the way it was in Word when the document is opened in LibreOffice 6.3.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details:
Version: 6.3.1.0.0+ (x86)
Build ID: 13152ad88b24cadc836a829b4424a72a152ca9b1
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded

Please note that this is worse in master because of bug #126724 but fixing that regression should 

Also happens in
Version: 5.0.0.5
Build ID: 1b1a90865e348b492231e1c451437d7a15bb262b
Locale: hu-HU (hu_HU)
Comment 1 NISZ LibreOffice Team 2019-10-01 13:00:25 UTC
Created attachment 154677 [details]
Screenshot of the original document side by side in Word and Writer.
Comment 2 NISZ LibreOffice Team 2019-10-01 13:01:00 UTC
Created attachment 154678 [details]
Example file from Word
Comment 3 Balázs Varga 2019-10-01 13:09:30 UTC
Confirmed in Version: 6.3.1.0.0+ and Version: 5.0.0.5 too.
Comment 4 Commit Notification 2019-10-03 08:04:16 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/86e4d68e62c6291ef386b5fcf0f8912989f8e661

tdf#127907 tdf#126724 Chart DOCX import: fix axis title position

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.