tdf#127907 Chart DOCX import: fix axis title position

Custom position of axis title reset to default when
the document is opened in LibreOffice.

Also fix tdf#126724 which was a regression from commit:
48480d4f19d2fb92ca4ae0527eec4753cdc439c0
(make tools::Rectangle::getBottom return 0 when empty)

Note: The y coordinate of Y axis title position is still
wrong because of another older bug.

Change-Id: I449ad3b2252e05ab38d6752512d822c355ff8606